2012-01-21 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #27683. Add langDatabaseOverlay to documentation.
	* [~BUG] Fixes #33224. Direction cleanup task: add downloads directory. Credits go to Francois Suter for investigating the issue and providing patches.

2012-01-09 Daniel Zielinski <development@loctimize.com>
	* Changed version to 3.3.11

2011-12-11 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #31864. Insufficient test for detecting RTE fields. Credits go to Francois Suter for investigating the issue and providing patches.
	* [+FEATURE] Fixes #32379. Add system to clean up old files. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #32153. Add FTP support to CLI import script. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #31863. Missing messages in export script. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~TASK] Fixes #31865. Cleanup of CLI export script. Credits go to Francois Suter for investigating the issue and providing patches.

2011-11-01 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #30397. Allow for transformation of custom tags in CAT XML export process. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #27683 Fixes #8875. Add langDatabaseOverlay to documentation.

2011-10-14 Daniel Zielinski <development@loctimize.com>
	* [~BUG] Fixes #31469. Delete old translations did not work. Credits also go to Francois Suter.

2011-09-29 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #27132. Use 1=1 instead of 1 in where clause.
	* [~BUG] Improved RTE handling. Credits go to Helmut Hummel for sending a patch.

2011-08-23 Daniel Zielinski <development@loctimize.com>
	* Fixed bug with Excel XML export/import
	* Added preview URL attribute in CATXML for source language
	* Improved filetype for SDL Trados Studio 2009
	* Changed version to 3.3.10
